--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -4,7 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "非常に参考になる解説：\n",
+    "https://mosko.tokyo/post/pytorch-rnn/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# RNN\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wget: /home/toshinao/anaconda3/envs/base2/lib/libcrypto.so.1.0.0: no version information available (required by wget)\n",
+      "wget: /home/toshinao/anaconda3/envs/base2/lib/libssl.so.1.0.0: no version information available (required by wget)\n",
+      "wget: /home/toshinao/anaconda3/envs/base2/lib/libssl.so.1.0.0: no version information available (required by wget)\n",
+      "--2019-02-09 19:50:12--  https://github.com/moskomule/pytorch.learning/blob/master/tutorial/rnn.py\n",
+      "Resolving github.com (github.com)... 192.30.255.113, 192.30.255.112\n",
+      "Connecting to github.com (github.com)|192.30.255.113|:443... connected.\n",
+      "HTTP request sent, awaiting response... 404 Not Found\n",
+      "2019-02-09 19:50:12 ERROR 404: Not Found.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "wget https://github.com/moskomule/pytorch.learning/blob/master/tutorial/rnn.py"
    ]
   },
   {
@@ -19,19 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-981629d018e7>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-981629d018e7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    git commit -a -m \"added theoretical_consideration\"\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master bbb2aed] added theoretical_consideration\n",
+      " 1 file changed, 143 insertions(+)\n",
+      " create mode 100644 theoretical_consideraiton.ipynb\n"
      ]
     }
    ],
    "source": [
+    "%%bash\n",
     "git commit -a -m \"added theoretical_consideration\""
    ]
   },
@@ -41,11 +77,14 @@
    "source": [
     "$$\n",
     "\\begin{align}\n",
-    "\\text{時点$t$における$l$番目の(hidden) layerにおけるnode value}=h^{(l)}_t=f\\left(\n",
-    "W^{(l)} \\left[\n",
-    "a\n",
-    "\\right]\n",
-    "\\right\n",
+    "\\text{時点$t$における$l$番目の(hidden) layerにおけるnode value}=h^{(l)}_t=f\n",
+    "\\left(\n",
+    "    W^{(l)}   \n",
+    "    \\begin{bmatrix}\n",
+    "        h^{(l-1)}_t\\\\\n",
+    "        h^{(l)}_{t-1}\n",
+    "    \\end{bmatrix}\n",
+    "\\right)\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -79,19 +118,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\n",
-    "$$"
+    "書籍などの説明では上記のRNNを簡略化したのちにgateを導入しているように見える"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GRU\n",
-    "GRU の解説は\n",
-    "https://mosko.tokyo/post/pytorch-rnn/\n",
-    "\n",
+    "soft callのような選択的な期限前償還によりタイムスリップするイメージ\n",
+    "* ただし、満期依存するクーポンでcall notice periodに入るとクーポンのスケジュールもタイムスリップする\n",
+    "* このメカニズムにより非常に遠い満期直前のクーポンの大小が$t=0$におけるオプションバリューに効いてくる\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GRU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "gateをたくさんいれたRNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(以下、gateの名前が書籍と上記リンクで異なるが書籍のほうを採用する)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* gateによりショートカットしてくるバリュー$n$\n",
+    "    * 普通のRNNやgated RNNとほぼ同じものだが、\n",
+    "    * 一時点前の同レイヤーからのチャンネルがreset gate $r$によって遮断されることがある\n",
+    "* update gate $z$はgated RNNのゲートと同様に機能\n",
+    "* update gate $z$およびreset gate $r$は普通のRNNのhidden node valueと同じ形式の演算で決まる\n",
+    "    * 書籍の(2.61)式もそのことを物語っている"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 以下、古い読解"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "上記文献の場合、\n",
     "* candidate node $n$が一番素朴なRNN(活性化関数を$\\tanh$としたもの)と自然に対応が付くノード\n",
     "    * ただし、RNNで素直に一時点前の同じレイヤーの隠れ層からの伝搬があるのに対して、GRUではreset gate $r$がゼロの時は伝搬を遮断する\n",
