--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,22 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master bbb2aed] added theoretical_consideration\n",
-      " 1 file changed, 143 insertions(+)\n",
-      " create mode 100644 theoretical_consideraiton.ipynb\n"
+      "[master 38ea755] check point\n",
+      " 1 file changed, 100 insertions(+), 18 deletions(-)\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git commit -a -m \"added theoretical_consideration\""
+    "git commit -a -m \"check point\""
    ]
   },
   {
@@ -118,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "書籍などの説明では上記のRNNを簡略化したのちにgateを導入しているように見える"
+    "LSTMやGRUなどの総称"
    ]
   },
   {
@@ -134,15 +133,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GRU"
+    "## GRU"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "gateをたくさんいれたRNN"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -159,7 +156,7 @@
     "    * 普通のRNNやgated RNNとほぼ同じものだが、\n",
     "    * 一時点前の同レイヤーからのチャンネルがreset gate $r$によって遮断されることがある\n",
     "* update gate $z$はgated RNNのゲートと同様に機能\n",
-    "* update gate $z$およびreset gate $r$は普通のRNNのhidden node valueと同じ形式の演算で決まる\n",
+    "*  gate $z$およびupdate gate $r$は普通のRNNのhidden node valueと同じ形式の演算で決まる\n",
     "    * 書籍の(2.61)式もそのことを物語っている"
    ]
   },
@@ -167,7 +164,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 以下、古い読解"
+    "### option analogy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "* 早期行使が起こるかどうかがupdate gateによってコントロールされている\n",
+    "    * 早期行使"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 以下、古い読解"
    ]
   },
   {
