--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 38ea755] check point\n",
-      " 1 file changed, 100 insertions(+), 18 deletions(-)\n"
+      "[master e5645cc] check point\n",
+      " 1 file changed, 26 insertions(+), 12 deletions(-)\n"
      ]
     }
    ],
@@ -208,6 +208,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# attention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* This is a penというsequenceに二層の隠れ層を用いて、　300x4（4 words $\\rightarrow$ 400 x 4 $\\rightarrow$ 300 x 4）の出力を得たとする。\n",
+    "* 最後の400および300次元ベクトルがdecoderの隠れ層の初期値となる\n",
+    "    * encoderとdecoderの各隠れ層の次元は同一であるとする\n",
+    "* 翻訳先のdecoderの1単語目の隠れ層出力をまず求める\n",
+    "* 求められた隠れ層出力（300次元ベクトル）とencoderの300次元ベクトル４つそれぞれとの内積を取る\n",
+    "* 内積をウェイトとしたencoderの300次元ベクトルとのweighted sumを求め、もともとのdecoder隠れ層アウトプット300次元とconcatする（600次元になる？）\n",
+    "* 600次元ベクトルを線形変換(600xoutput空間の語彙数)し活性化関数をかける。出力言語の語彙数を10000とすると10000次元のベクトルが出力される\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -232,6 +252,30 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.4"
+  },
+  "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "navigate_num": "#000000",
+    "navigate_text": "#333333",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700",
+    "sidebar_border": "#EEEEEE",
+    "wrapper_background": "#FFFFFF"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "121px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": true,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
