--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master e5645cc] check point\n",
-      " 1 file changed, 26 insertions(+), 12 deletions(-)\n"
+      "[master 4917a1b] check point\n",
+      " 1 file changed, 47 insertions(+), 3 deletions(-)\n"
      ]
     }
    ],
@@ -224,7 +224,8 @@
     "* 翻訳先のdecoderの1単語目の隠れ層出力をまず求める\n",
     "* 求められた隠れ層出力（300次元ベクトル）とencoderの300次元ベクトル４つそれぞれとの内積を取る\n",
     "* 内積をウェイトとしたencoderの300次元ベクトルとのweighted sumを求め、もともとのdecoder隠れ層アウトプット300次元とconcatする（600次元になる？）\n",
-    "* 600次元ベクトルを線形変換(600xoutput空間の語彙数)し活性化関数をかける。出力言語の語彙数を10000とすると10000次元のベクトルが出力される\n"
+    "* 600次元ベクトルを線形変換(600xoutput空間の語彙数)し活性化関数をかける。出力言語の語彙数を10000とすると10000次元のベクトルが出力される\n",
+    "    * 隠れ層がひとつ増える感じ。ただし、普通のRNNの隠れ層ではdecoderの直前ワードの隠れ層をconcatするところ、この最後の「隠れ層」ではattentionがconcatされている"
    ]
   },
   {
