--- a/my_toy_nn.ipynb
+++ b/my_toy_nn.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 44f8349] checkpoint\n",
-      " 3 files changed, 5184 insertions(+), 3 deletions(-)\n",
-      " create mode 100644 deploy_seq2seq_hybrid_frontend_tutorial.ipynb\n",
-      " create mode 100644 my_toy_nn.ipynb\n"
+      "[master 64a4286] checkpoint\n",
+      " 2 files changed, 883 insertions(+), 414 deletions(-)\n",
+      " rewrite my_toy_nn.ipynb (71%)\n"
      ]
     }
    ],
@@ -322,11 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = Net()"
+    "model = Net()"
    ]
   },
   {
@@ -419,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,15 +442,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = net"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -460,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -470,17 +460,103 @@
       "text/plain": [
        "Net(\n",
        "  (fc1): Linear(in_features=50, out_features=1, bias=True)\n",
-       "  (out_act): Sigmoid()\n",
        ")"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yield_batch():\n",
+    "        for beg_i in range(0, X.size(0), batch_size):\n",
+    "            x_batch = X[beg_i:beg_i + batch_size, :]\n",
+    "            y_batch = Y[beg_i:beg_i + batch_size, :]\n",
+    "            x_batch = Variable(x_batch)\n",
+    "            y_batch = Variable(y_batch)\n",
+    "            yield x_batch , y_batch\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type((0,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = yield_batch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'generator' object has no attribute 'next'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-ee1c0c51cd78>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0myield_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'generator' object has no attribute 'next'"
+     ]
+    }
+   ],
+   "source": [
+    "yield_batch().next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'generator' object has no attribute 'next'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-dfa925ed95b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'generator' object has no attribute 'next'"
+     ]
+    }
+   ],
+   "source": [
+    "tmp.next()"
    ]
   },
   {
