--- a/my_toy_nn.ipynb
+++ b/my_toy_nn.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 64a4286] checkpoint\n",
-      " 2 files changed, 883 insertions(+), 414 deletions(-)\n",
-      " rewrite my_toy_nn.ipynb (71%)\n"
+      "[master 195cb56] checkpoint\n",
+      " 1 file changed, 96 insertions(+), 20 deletions(-)\n"
      ]
     }
    ],
@@ -474,17 +473,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def yield_batch():\n",
-    "        for beg_i in range(0, X.size(0), batch_size):\n",
-    "            x_batch = X[beg_i:beg_i + batch_size, :]\n",
-    "            y_batch = Y[beg_i:beg_i + batch_size, :]\n",
-    "            x_batch = Variable(x_batch)\n",
-    "            y_batch = Variable(y_batch)\n",
-    "            yield x_batch , y_batch\n",
+    "def yield_batch(X , Y , batch_size):\n",
+    "    for beg_i in range(0, X.size(0), batch_size):\n",
+    "        x_batch = X[beg_i:beg_i + batch_size, :]\n",
+    "        y_batch = Y[beg_i:beg_i + batch_size, :]\n",
+    "        x_batch = Variable(x_batch)\n",
+    "        y_batch = Variable(y_batch)\n",
+    "        yield x_batch \n",
     "    "
    ]
   },
@@ -510,16 +509,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp = yield_batch()"
+    "batch_size = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = yield_batch(X , Y  , batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -529,13 +537,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-ee1c0c51cd78>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0myield_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-57-dfa925ed95b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m: 'generator' object has no attribute 'next'"
      ]
     }
    ],
    "source": [
-    "yield_batch().next()"
+    "next(tmp\n",
+    "    )"
    ]
   },
   {
@@ -830,7 +839,9 @@
    "toc_section_display": "block",
    "toc_window_display": true,
    "widenNotebook": false
-  }
+  },
+  "toc-showcode": false,
+  "toc-showtags": false
  },
  "nbformat": 4,
  "nbformat_minor": 2
