--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master d98ecad] check point\n",
-      " 1 file changed, 5 insertions(+), 4 deletions(-)\n"
+      "[master f3f3d9a] check point\n",
+      " 3 files changed, 277 insertions(+), 143 deletions(-)\n"
      ]
     }
    ],
@@ -247,6 +247,20 @@
    "metadata": {},
    "source": [
     "* [High-Dimensional Time Series Forecasting with Convolutional Neural Networks](https://github.com/JEddy92/TimeSeries_Seq2Seq/blob/master/notebooks/TS_Seq2Seq_Conv_Intro.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# convolutional NN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://jeddy92.github.io/JEddy92.github.io/ts_seq2seq_conv/"
    ]
   },
   {
