--- a/my_toy_nn2.ipynb
+++ b/my_toy_nn2.ipynb
@@ -12,16 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master baffdd9] checkpoint\n",
-      " 2 files changed, 1158 insertions(+), 3 deletions(-)\n",
-      " create mode 100644 my_toy_nn2.ipynb\n"
+      "[master 86444c8] checkpoint\n",
+      " 1 file changed, 247 insertions(+), 282 deletions(-)\n"
      ]
     }
    ],
@@ -395,19 +394,44 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# optimizer"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Net()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Net(\n",
+      "  (fc1): Linear(in_features=50, out_features=50, bias=True)\n",
+      "  (relu1): ReLU()\n",
+      "  (dout): Dropout(p=0.2)\n",
+      "  (fc2): Linear(in_features=50, out_features=100, bias=True)\n",
+      "  (prelu): PReLU(num_parameters=1)\n",
+      "  (out): Linear(in_features=100, out_features=1, bias=True)\n",
+      "  (out_act): Sigmoid()\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# optimizer"
    ]
   },
   {
