--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -253,15 +253,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# convolutional NN"
+    "https://jeddy92.github.io/JEddy92.github.io/ts_seq2seq_conv/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://jeddy92.github.io/JEddy92.github.io/ts_seq2seq_conv/"
+    "# LiNGAM"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "サンプル次元が列方向になっていることに注意"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "x=Bx+e\\qquad \n",
+    "\\begin{cases}\n",
+    "B&\\text{下三角行列}\\\\\n",
+    "e &\\text{正規分布でない外生変数}\n",
+    "\\end{cases}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "であるならば$x$の上から順番に因果が流れる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "(I-B)x = e\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ICA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "x = A s\n",
+    "\\qquad\n",
+    "\\begin{cases}\n",
+    "x &\\text{観測値}\\\\\n",
+    "s &\\text{hidden indemendend components}\n",
+    "\\end{cases}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### サンプル相関：\n",
+    "$$\n",
+    "C = \\frac{1}{N} x x^{\\rm T}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### サンプル相関の固有値分解\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "C = U^{\\rm T} \\Lambda U\n",
+    "\\qquad \\text{where} \n",
+    "\\begin{cases}\n",
+    "U&\\text{直行行列}\\\\\n",
+    "\\Lambda&\\text{対角行列}\n",
+    "\\end{cases}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "無相関にする回転:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
