--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master f3f3d9a] check point\n",
-      " 3 files changed, 277 insertions(+), 143 deletions(-)\n"
+      "[master 452d383] check point\n",
+      " 2 files changed, 139 insertions(+), 11 deletions(-)\n"
      ]
     }
    ],
@@ -357,7 +357,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "無相関にする回転:"
+    "### 無相関にする回転\n",
+    "\n",
+    "$$\n",
+    "\\epsilon = V\\Lambda^{-1} Ux\\qquad \\text{where $V$ is orthgonal matrix}\n",
+    "$$\n",
+    "\n",
+    "さらに対角行列分の自由度があるが意味がないので省略"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上記の$\\epsilon$がindependent componentと仮定しているので\n",
+    "\n",
+    "$$\n",
+    "x = U^{\\rm T}\\Lambda V^{\\rm T} \\epsilon\n",
+    "$$\n",
+    "\n"
    ]
   },
   {
