--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 452d383] check point\n",
-      " 2 files changed, 139 insertions(+), 11 deletions(-)\n"
+      "[master 557007d] check point\n",
+      " 1 file changed, 22 insertions(+), 4 deletions(-)\n"
      ]
     }
    ],
@@ -360,7 +360,14 @@
     "### 無相関にする回転\n",
     "\n",
     "$$\n",
-    "\\epsilon = V\\Lambda^{-1} Ux\\qquad \\text{where $V$ is orthgonal matrix}\n",
+    "\\begin{align}\n",
+    "e =P \\Theta V\\Lambda^{-1} Ux\\qquad \\text{where}\n",
+    "\\begin{cases}\n",
+    "V&\\text{orthgonal matrix}\\\\\n",
+    "\\Theta & \\text{permutation}\\\\\n",
+    "\\Theta &\\text{diagonal}\n",
+    "\\end{cases}\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
     "さらに対角行列分の自由度があるが意味がないので省略"
@@ -370,10 +377,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "上記の$\\epsilon$がindependent componentと仮定しているので\n",
+    "$V$を何らかの方法で特定したとする（？）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上記の$e$がindependent componentと仮定しているので\n",
     "\n",
     "$$\n",
-    "x = U^{\\rm T}\\Lambda V^{\\rm T} \\epsilon\n",
+    "x = U^{\\rm T}\\Lambda V^{\\rm T} e\n",
     "$$\n",
     "\n"
    ]
