--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 557007d] check point\n",
-      " 1 file changed, 22 insertions(+), 4 deletions(-)\n"
+      "[master 90d7d4f] check point\n",
+      " 1 file changed, 20 insertions(+), 6 deletions(-)\n"
      ]
     }
    ],
@@ -305,6 +305,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 識別可能性\n",
+    "\n",
+    "```\n",
+    "因果グラフの構造が異なれば、観測変数の分布が異なる\n",
+    "```\n",
+    "\n",
+    "場合に識別可能という（？）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ICA"
    ]
   },
@@ -364,13 +377,11 @@
     "e =P \\Theta V\\Lambda^{-1} Ux\\qquad \\text{where}\n",
     "\\begin{cases}\n",
     "V&\\text{orthgonal matrix}\\\\\n",
-    "\\Theta & \\text{permutation}\\\\\n",
+    "P & \\text{permutation}\\\\\n",
     "\\Theta &\\text{diagonal}\n",
     "\\end{cases}\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "さらに対角行列分の自由度があるが意味がないので省略"
+    "$$\n"
    ]
   },
   {
@@ -387,17 +398,47 @@
     "上記の$e$がindependent componentと仮定しているので\n",
     "\n",
     "$$\n",
-    "x = U^{\\rm T}\\Lambda V^{\\rm T} e\n",
+    "x = U^{\\rm T}\\Lambda V^{\\rm T} \\Theta^{-1}P^{-1}e\n",
     "$$\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "上記が\n",
+    "$$\n",
+    "x = (I-B)e\n",
+    "$$\n",
+    "とも書けるはずなので"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "P\\Theta(I-B) = U^{\\rm T} \\Lambda V^{\\rm T} \n",
+    "$$\n",
+    "右辺を$W_{\\rm ICA}$とあらわすことにすると・・"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "P\\Theta(I-B) = W_{\\rm ICA}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "よってICAで求まった行列にpermutationをかけて、下三角行列にできれば因果の流れが解明できたことになる"
+   ]
   },
   {
    "cell_type": "markdown",
