--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 90d7d4f] check point\n",
-      " 1 file changed, 20 insertions(+), 6 deletions(-)\n"
+      "[master 6e776f9] check point\n",
+      " 1 file changed, 53 insertions(+), 12 deletions(-)\n"
      ]
     }
    ],
@@ -438,6 +438,33 @@
    "metadata": {},
    "source": [
     "よってICAで求まった行列にpermutationをかけて、下三角行列にできれば因果の流れが解明できたことになる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## my consideration\n",
+    "\n",
+    "* そもそもpermutationくらいで下三角に近くできるとは思いにくい\n",
+    "* ICAはもともと非常にノイズに弱い（はず？）\n",
+    "* Uの自由度を使うのはどうだろうか？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 無相関性のみ仮定した場合"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "I-B = U^{\\rm T} \\Lambda V^{\\rm T} \\Theta^{-1} P^{-1}\n",
+    "$$"
    ]
   },
   {
