--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 6e776f9] check point\n",
-      " 1 file changed, 53 insertions(+), 12 deletions(-)\n"
+      "[master 9899dde] check point\n",
+      " 1 file changed, 30 insertions(+), 3 deletions(-)\n"
      ]
     }
    ],
@@ -465,6 +465,21 @@
     "$$\n",
     "I-B = U^{\\rm T} \\Lambda V^{\\rm T} \\Theta^{-1} P^{-1}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "QR分解により、任意の行列は\n",
+    "$$\n",
+    "QR \\qquad\n",
+    "\\begin{cases}\n",
+    "Q&\\text{直行行列}\\\\\n",
+    "R &\\text{上三角行列}\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "と書ける"
    ]
   },
   {
