--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 9899dde] check point\n",
-      " 1 file changed, 30 insertions(+), 3 deletions(-)\n"
+      "[master 2c98588] check point\n",
+      " 2 files changed, 83 insertions(+), 64 deletions(-)\n"
      ]
     }
    ],
@@ -481,6 +481,120 @@
     "$$\n",
     "と書ける"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "inversibleな行列のQR分解は$R$の対角要素が正であるという条件を置けばユニーク　([wikipedia](https://en.wikipedia.org/wiki/QR_decomposition))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 因果がわかってなにがうれしいか？ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To be discussed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 極値理論"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$Z_n$を$n$サンプル\n",
+    "$\n",
+    "X_1, \\cdots , X_n\n",
+    "$\n",
+    "の最大値とする"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "F(x) = P(X_i \\le x) \\quad\\text{for}\\quad i = 1,\\cdots , n\n",
+    "$$\n",
+    "として、\n",
+    "$$\n",
+    "P(Z_n \\le x ) = \\Pi_{i=1}^n P(X_i \\le x)\n",
+    "={F(x)}^n\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$n\\to \\infty$の極限では　$Z_n$は「$X_i$が取り得る値の最大値が確率１で実現する」ような分布に収束するはず"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "中心極限定理にある意味似たようなスケーリング則を考えたい\n",
+    "おそらく\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "b_n&\\to X_i\\text{がとり得る値の最大値}\\\\\n",
+    "a_n &\\to 0 \\qquad\\text{(微視化が進むので拡大倍率を挙げていく必要)}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "であるような$a_n,~b_n$で変形した$Z_n$の分布がある確率分布\n",
+    "に収束するとする：\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "P\\left(\n",
+    "\\frac{Z_n - b_n}{a_n} \\le y \n",
+    "\\right)\\to G(y)\n",
+    "\\end{align}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "これは\n",
+    "ある$y$を固定したときに\n",
+    "$$\n",
+    "Z_n \\le a_n y + b_n\n",
+    "$$\n",
+    "であるような確率が大きい任意の$n$に対して概ね一定であることを意味する"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "イメージは\n",
+    "\n",
+    "* 100サンプルなら最大値が90である確率は１０％\n",
+    "* 1000サンプルなら最大値が95である確率が１０％\n",
+    "\n",
+    "みたいな感じか\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
