--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 2c98588] check point\n",
-      " 2 files changed, 83 insertions(+), 64 deletions(-)\n"
+      "[master a553c01] check point\n",
+      " 1 file changed, 117 insertions(+), 3 deletions(-)\n"
      ]
     }
    ],
