--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master a553c01] check point\n",
-      " 1 file changed, 117 insertions(+), 3 deletions(-)\n"
+      "[master 2b4c461] check point\n",
+      " 1 file changed, 3 insertions(+), 3 deletions(-)\n"
      ]
     }
    ],
@@ -583,18 +583,40 @@
    "source": [
     "イメージは\n",
     "\n",
-    "* 100サンプルなら最大値が90である確率は１０％\n",
-    "* 1000サンプルなら最大値が95である確率が１０％\n",
+    "* 100サンプルなら最大値が90以下である確率は10%\n",
+    "  $$b_{100} = 100,~a_{100} = 1 ,~  y = -10,~a_{100}y+b_{100}= 90,~ G(-10) = 0.1$$\n",
+    "* 1000サンプルなら最大値が95以下である確率は10%\n",
+    "  $$b_{1000} = 100,~a_{1000} = 0.5 ,~  y = -10,~ a_{1000}y + b_{1000} = 95, ~ G(-10) = 0.1$$\n",
+    "* 10000サンプルなら最大値が99以下である確率は10%\n",
+    "  $$b_{10000} = 100,~a_{10000} = 0.1 ,~  y = -10,~ a_{10000}y + b_{10000} = 99 , G(-10) = 0.1$$\n",
     "\n",
     "みたいな感じか\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "書籍の\n",
+    "$$\n",
+    "{F(a_ny+b_n)}^n \\to G(y) \n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "は\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "{F(90)}^{100} \\approx& G(-10)\\\\\n",
+    "{F(95)}^{1000}\\approx & G(-10)\\\\\n",
+    "{F(99)}^{10000}\\approx & G(-10)\n",
+    "\\end{align}\n",
+    "$$\n",
+    "というイメージ"
+   ]
   },
   {
    "cell_type": "markdown",
