--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 2b4c461] check point\n",
-      " 1 file changed, 3 insertions(+), 3 deletions(-)\n"
+      "[master 8a90035] check point\n",
+      " 1 file changed, 31 insertions(+), 9 deletions(-)\n"
      ]
     }
    ],
@@ -615,7 +615,16 @@
     "{F(99)}^{10000}\\approx & G(-10)\n",
     "\\end{align}\n",
     "$$\n",
-    "というイメージ"
+    "というイメージ。\n",
+    "\n",
+    "さらに90,95,99といった閾値以外にも同じ$a_n,b_n$から導かれる99,99.5,99.9といった閾値を最大値が下回る確率についても同じ関係が成り立つことが主張されている"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "このように極限が$G$で特徴づけられるような確率分布を$G$の吸引領域（domain of attractionと呼ぶ）"
    ]
   },
   {
