--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 8a90035] check point\n",
-      " 1 file changed, 31 insertions(+), 9 deletions(-)\n"
+      "[master 8d8e872] check point\n",
+      " 1 file changed, 13 insertions(+), 4 deletions(-)\n"
      ]
     }
    ],
@@ -617,15 +617,38 @@
     "$$\n",
     "というイメージ。\n",
     "\n",
-    "さらに90,95,99といった閾値以外にも同じ$a_n,b_n$から導かれる99,99.5,99.9といった閾値を最大値が下回る確率についても同じ関係が成り立つことが主張されている"
+    "さらに90,95,99といった閾値以外にも同じ$a_n,b_n$から導かれる99, 99.5, 99.9といった閾値を最大値が下回る確率についても同じ関係が成り立つことが主張されている"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "このように極限が$G$で特徴づけられるような確率分布を$G$の吸引領域（domain of attractionと呼ぶ）"
+    "このように極限が$G$で特徴づけられるような確率分布を$G$の吸引領域（domain of attraction)と呼ぶ"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "書籍p12の最初の式も大雑把に言っておなじような主張をしている。（？）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$G(y)$がゼロでも１でもないような$y$に対応する閾値$a_n y + b_n$は大きい$n$に対して、取り得る値の上限$w_F$に収束する\n",
+    "\n",
+    "なぜならば大きな$n$に対して$Z_n$は$w_F$近辺の値しか取らないようになるため"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
